2013-10-24  Sancho Lerena <slerena@artica.es>

	* include/functions.php: Fixed check_mail_queue function.

	* godmode/setup/incidents_setup.php: removed chat setup option
	chat is no more available in 4.x version.

	* extras/migrate.sql: Dropping an inexistant field can break
	things. Dropping the drop :)

2013-10-24  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css: Fixed some css issues and new
	style created for export to PDF button
	* include/export_csv.php: New feature to export inventory
	information to CSV.
	* operation/inventories/manage_objects_types_list.php,
	* operation/inventories/inventory_search.php,
	* operation/inventories/inventory.php,
	* include/functions_inventories.php: Rewrited function to display
	inventory list.
	* operation/inventories/inventory_detail.php: Removed validation rule
	that checks for existing inventory objects with the same name.

2013-10-23  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_statistics.php,
	  operation/incidents/incident_graph.php: Fixed an error that made
	  impossible to go back to the incident search from the incident
	  statistics or graphs when there was no incidents.

2013-10-23  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_search.php,
	  operation/incidents/incident_search_logic.php,
	  include/functions_form.php,
	  include/functions_incidents.php: Now is possible to filter incidents
	  by the fields of incidents types and save searches with those new
	  filters.

	* extensions/incident_summary.php: Improved a bit the pdf styles.

	* extras/import_users_from_csv.php: Fixed an error on a path.

	* extras/migrate.sql: Deleted an unused line.

2013-10-22  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_dashboard_detail.php: Fixed an error.

2012-10-22  Sancho Lerena <slerena@artica.es>

	* integria_db.sql: Fixed typo in tinvoice table
	definition (that makes installer crash).
