@@ -1,3 +1,12 @@
+2013-10-25  Sancho lerena <slerena@artica.es>
+
+	* include/functions_crm.php: Header update. 
+
+	* operation/agenda/entry.php: Removed eventlog entry.
+
+	* godmode/grupos/lista_grupos.php: Changed call to event log
+	to audit log.
+
 2013-10-24  Sancho Lerena <slerena@artica.es>
 
 	* include/functions.php: Fixed check_mail_queue function.
